--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "angular": "~1.2.16",
     "underscore": "~1.6.0",
     "bootstrap": "~3.1.1",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "moment": "~2.8.3",
+    "moment-timezone": "~0.2.2"
   },
   "devDependencies": {}
 }
