--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Chrome Extension",
-    "version": "0.2.0",
+    "name": "Simple World Clock",
+    "version": "1.0.0",
     "manifest_version": 2,
-    "description": "__MSG_appDescription__",
+    "description": "Just a Simple World Clock",
     "icons": {
         "16": "images/icon-16.png",
         "128": "images/icon-128.png"
@@ -19,41 +19,11 @@
         "default_title": "Chrome Extension",
         "default_popup": "popup.html"
     },
-    "externally_connectable": {
-        "matches": [
-        ]
-    },
     "permissions": [
-        "http://*/*",
-        "https://*/*",
-        "contextMenus",
-        "storage",
-        "notifications",
-        "clipboardRead",
-        "clipboardWrite",
-        "tabs",
-        "<all_urls>"
     ],
     "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "web_accessible_resources": [
         "http://fonts.googleapis.com/",
         "https://*.google-analytics.com/**/*"
-    ],
-    "content_scripts": [
-        {
-            "matches": [
-                "http://*/*",
-                "https://*/*"
-            ],
-            "exclude_matches": [
-            ],
-            "css": [
-            ],
-            "js": [
-                "scripts/contentscript.js"
-            ],
-            "run_at": "document_end",
-            "all_frames": false
-        }
     ]
 }
